--- a/index.html
+++ b/index.html
@@ -117,6 +117,137 @@
       </div>
     </div>
 
+    <!-- connect section -->
+    <div class="container">
+      <div class="row d-flex align-items-center">
+        <div class="col-12 my-5">
+          <hr class="text-black-25" />
+        </div>
+        <div class="col-md-7 mb-5">
+          <h2 class="fw-bold text-start title-connect">
+            Connect easily. <br />
+            Collaborate efficiently.
+          </h2>
+        </div>
+        <div class="col-md-4 mb-5">
+          <p class="desc-connect">
+            Rather than do things the typical way, we’ve created a
+            membership-based primary care practice truly designed around your
+            needs.
+          </p>
+        </div>
+        <div class="col-12 d-flex justify-content-center">
+          <img
+            src="asset/dashboard.png"
+            alt="dashboard"
+            class="img-fluid w-100" />
+        </div>
+      </div>
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title-custom">01</h5>
+              <h6 class="card-subtitle-custom mb-2 text-body-secondary">
+                For Doctor
+              </h6>
+              <p class="card-text-custom">
+                You get an in-house team to guide and advocate for you through
+                questions
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title-custom">02</h5>
+              <h6 class="card-subtitle-custom mb-2 text-body-secondary">
+                For Patient
+              </h6>
+              <p class="card-text-custom">
+                You get an in-house team to guide and advocate for you through
+                questions
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title-custom">03</h5>
+              <h6 class="card-subtitle-custom mb-2 text-body-secondary">
+                For Clinician
+              </h6>
+              <p class="card-text-custom">
+                You get an in-house team to guide and advocate for you through
+                questions
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 my-5">
+          <hr class="text-black-25" />
+        </div>
+      </div>
+    </div>
+
+    <!-- protect section -->
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h2 class="title-connect">
+            Protect yourself and <br />
+            your family first.
+          </h2>
+        </div>
+      </div>
+      <div class="row d-flex justify-content-center">
+        <div class="col-4 py-5 px-3 me-5">
+          <div class="row d-flex justify-content-center">
+            <img src="asset/item_1.svg" alt="" class="img-fluid w-50" />
+          </div>
+          <p class="item-title mt-3">Stay at Home first</p>
+          <p class="item-description">
+            Our technology makes it practically impossible for any patient data
+            breach to occur
+          </p>
+        </div>
+        <div class="col-4 py-5 px-3">
+          <div class="row d-flex justify-content-center">
+            <img src="asset/item_2.svg" alt="" class="img-fluid w-50" />
+          </div>
+          <p class="item-title mt-5">Wash Your Hands Periodically</p>
+          <p class="item-description">
+            You can talk freely and confidently about patients with other health
+            professionals treating them
+          </p>
+        </div>
+      </div>
+      <div class="row d-flex justify-content-center">
+        <div class="col-4 py-5 px-3 me-5">
+          <div class="row d-flex justify-content-center">
+            <img src="asset/item_3.svg" alt="" class="img-fluid w-50" />
+          </div>
+          <p class="item-title mt-3">Consume more Vitamin C</p>
+          <p class="item-description">
+            A more fluid communication reduces the risk of errors and enhances
+            your protection from a forensic point of view
+          </p>
+        </div>
+        <div class="col-4 py-5 px-3">
+          <div class="row d-flex justify-content-center">
+            <img src="asset/item_4.svg" alt="" class="img-fluid w-50" />
+          </div>
+          <p class="item-title mt-5">Always Use Hand Sanitizer</p>
+          <p class="item-description">
+            Organize your communications by patients, by securely sharing
+            messages, photos and documents with colleagues.
+          </p>
+        </div>
+      </div>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
